--- a/gateway_server/src/main/resources/bootstrap.yml
+++ b/gateway_server/src/main/resources/bootstrap.yml
@@ -1,9 +1,8 @@
 spring:
   application:
-    name: gateway-server
+    name: gateway-cloud
   cloud:
     config:
       uri: http://localhost:7001
       profile: dev #环境名称
       label: master #分支
-
