--- a/provider_service/src/main/resources/bootstrap.yml
+++ b/provider_service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: provider-service
+    name: provider-service-cloud
   cloud:
     config:
       uri: http://localhost:7001
